--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>kotlin_customer_mvc</name>
 	<description>Customer project for Spring Boot</description>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 		<kotlin.version>1.9.20</kotlin.version>
 		<spring-cloud.version>2023.0.0-RC1</spring-cloud.version>
 	</properties>
@@ -81,6 +81,10 @@
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
