--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,12 @@
 		<dependency>
 			<groupId>com.wanchalerm.tua</groupId>
 			<artifactId>kotlin_common_example</artifactId>
-			<version>0.1.0</version>
+			<version>0.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>33.0.0-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
