--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.wanchalerm.tua</groupId>
 	<artifactId>kotlin_customer_mvc</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>kotlin_customer_mvc</name>
 	<description>Customer project for Spring Boot</description>
 	<properties>
