--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>kotlin_customer_mvc</name>
 	<description>Customer project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 		<kotlin.version>1.9.23</kotlin.version>
 		<spring-cloud.version>2023.0.0</spring-cloud.version>
 		<sonar.coverage.exclusions>
@@ -83,7 +83,7 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<version>8.2.0</version>
+			<version>8.3.0</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -103,7 +103,7 @@
 		<dependency>
 			<groupId>com.wanchalerm.tua</groupId>
 			<artifactId>kotlin_common_example</artifactId>
-			<version>0.1.7</version>
+			<version>0.1.15</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -111,9 +111,13 @@
 			<version>33.0.0-jre</version>
 		</dependency>
 		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito.kotlin</groupId>
 			<artifactId>mockito-kotlin</artifactId>
-			<version>3.2.0</version>
+			<version>5.2.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
