--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -6,7 +6,7 @@ spring.profiles.active=dev
 # ip and port of the config server
 spring.cloud.config.uri=http://localhost:8006/configuration
 
-#logging.level.root= DEBUG
+logging.level.root= INFO
 
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
